--- a/src/app/modules/about-us/pages/about-us/about-us.component.html
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.html
@@ -26,11 +26,11 @@
           </div>
         </div>
       </div>
-      <mat-tab-group mat-align-tabs="center">
+      <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
         <mat-tab label='{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}'>
           <div class="section-container white-background">
             <div class="word-break description-text description-text-container">
-              <h1 class="description-text-title">{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}</h1>
+              <h3 class="description-text-title">{{ "ABOUT-US.WHO-WE-ARE.TITLE" | translate }}</h3>
               <div>{{ "ABOUT-US.WHO-WE-ARE.DESC" | translate }}</div>
             </div>
             <img class="section-image" src="../../../../../assets/image/general-icons/ieee-itba.png" alt="Imagen nosotros"/>
@@ -39,7 +39,7 @@
         <mat-tab label='{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}'>
           <div class="section-container white-background">
             <div class="word-break description-text description-text-container">
-              <h1 class="description-text-title">{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}</h1>
+              <h3 class="description-text-title">{{ "ABOUT-US.WHAT-IS-IEEE.TITLE" | translate }}</h3>
               <div>{{ "ABOUT-US.WHAT-IS-IEEE.DESC" | translate }}</div>
             </div>
             <img class="section-image" src="../../../../../assets/image/general-icons/ieee.png" alt="Imagen IEEE"/>
@@ -48,7 +48,7 @@
         <mat-tab class="section-container" label='{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}'>
           <div class="section-container white-background">
             <div class="word-break description-text description-text-container">
-              <h1 class="description-text-title">{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}</h1>
+              <h3 class="description-text-title">{{ "ABOUT-US.WHAT-IS-ITBA.TITLE" | translate }}</h3>
               <div>{{ "ABOUT-US.WHAT-IS-ITBA.DESC" | translate }}</div>
             </div>
             <img class="section-image" src="../../../../../assets/image/general-icons/itba.png" alt="Imagen ITBA"/>
