--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-xl navbar-dark" id="nav" [style.background-color]="bgColor" mdbStickyHeader>
+<mdb-navbar SideClass="navbar navbar-nav navbar-expand-xl navbar-dark" id="nav" [style.background-color]="bgColor" mdbStickyHeader>
   <!-- Navbar brand -->
   <mdb-navbar-brand><a class="navbar-brand" [routerLink]="['']"><img
         src="../../../../assets/image/general-icons/IEEE-Logo-No-Text-Darkest.png" height="60vmin"
