--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -13,7 +13,7 @@
   <div class="row" style="height: 100%">
     <div class="mainFrame col-lg-8 col-md-6 col-12" style="padding-top: 160px">
       <div class="row d-flex flex-column align-items-center justify-content-center">
-        <mat-card class="d-flex flex-column align-items-center">
+        <mat-card class="d-flex flex-column align-items-center w-50">
           <mat-card-header>
             <mat-card-title>
               {{ 'LOGIN.TITLE' | translate }}
@@ -35,15 +35,15 @@
                 </button>
               </div>
 
-              <h4 *ngIf="loginResponse != null"
+              <h6 *ngIf="loginResponse != null"
                    id="passerr"
                    [class]="{ 'success': loginResponse.success, 'error': !loginResponse.success}"
               >
                   {{ loginResponse.message | translate }}
-              </h4>
-              <div class="row d-flex justify-content-center mt-3">
-                <h4>{{ 'LOGIN.NO_ACCOUNT' | translate }}</h4>
-                <a class="ml-2" href="/register">{{ 'LOGIN.SIGN_UP' | translate }}</a>
+              </h6>
+              <div class="col d-flex justify-content-center align-content-center mt-3">
+                <span>{{ 'LOGIN.NO_ACCOUNT' | translate }}</span>
+                <a class="ml-2 fw-medium" [routerLink]="['/register']">{{ 'LOGIN.SIGN_UP' | translate }}</a>
               </div>
             </form>
           </mat-card-content>
@@ -54,7 +54,7 @@
     <div class="col-lg-4 col-md-6 h-100 w-100 d-none d-md-flex align-items-center justify-content-center mt-4 "
          style="background-color: #00629B"
     >
-      <img alt="itbot" src="./assets/image/login/itbot.png" class="h-50" style="transform: scaleX(-1)"/>
+      <img alt="itbot" src="./assets/image/login/itbot_espejado.png" class="h-50"/>
     </div>
   </div>
 </body>
