--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
-
 html {
   /*min-height: 200%;*/
   background-size: cover;
@@ -10,7 +8,7 @@ body {
   background: rgb(255, 255, 255);
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
   background-size: cover;
-  font-size: 1.3em;
+  font-size: 1.1rem;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
@@ -55,11 +53,6 @@ h1 {
 
 .example-card {
   margin-bottom: 15px;
-}
-
-.example-header-image {
-  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png");
-  background-size: cover;
 }
 
 .banner {
@@ -285,7 +278,7 @@ h3 {
 }
 
 .category-card-description {
-  font-size: 1.2em;
+  font-size: 1.05rem;
 }
 
 .aboutus-container {
