--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -14,6 +14,7 @@ body {
     background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
     background-size: cover;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-size: 1rem;
 }
 
 .bottomLine {
@@ -146,6 +147,7 @@ body {
 .aboutus-section-header {
     color: #0d47a1;
     font-size: x-large;
+    font-weight: bolder;
 }
 
 .end-button-container {
@@ -249,7 +251,6 @@ h2{
   justify-content: center;
   margin: 1rem 0 0.25rem;
   transform: scale(1.5);    /* Enlarge bullets */
-  gap: 0.25rem;             /* Gap between bullets */
 }
 
 .pagination-prev-wrapper {
