--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -26,7 +26,7 @@
         </div>
       </div>
 
-    <mat-tab-group class="mt-3" mat-align-tabs="center">
+    <mat-tab-group class="mt-3" mat-align-tabs="center" mat-stretch-tabs="false">
         <mat-tab label="{{ 'GENERAL.ACTUAL' | translate }}">
             <div class="bottomLine">
                 <app-sponsor-component [currentsponsor]="sponsorsServiceVar.getCurrentSponsors()"></app-sponsor-component>
