--- a/src/app/modules/wie/pages/wie.component.css
+++ b/src/app/modules/wie/pages/wie.component.css
@@ -58,8 +58,9 @@ justify-content: center;
 }
 
 .section-title {
-font-size: 1.8rem;
-color: var(--wie-purple);
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: var(--wie-purple);
 }
 
 .container {
