--- a/src/app/modules/write-news/pages/write-news/write-news.component.html
+++ b/src/app/modules/write-news/pages/write-news/write-news.component.html
@@ -24,36 +24,37 @@
     </div>
 
     <div class="editor-container">
-        <mat-card style="max-width: 45%; height: fit-content">
+        <mat-card style="max-width: 45%; height: fit-content; padding: 1rem;">
             <mat-list-item>
               <!-- Title -->
-              <mat-form-field class="full-width">
+              <mat-form-field class="w-100">
                 <mat-label>{{ 'WRITE-NEW.TITLE2' | translate }}</mat-label>
                 <input id="title" matInput [(ngModel)]="newsContent.title">
               </mat-form-field>
             </mat-list-item>
             <mat-list-item>
               <!-- Tags -->
-              <mat-form-field class="full-width">
-                <mat-chip-list #chipList aria-label="Tag selection">
-                  <mat-chip
+              <mat-form-field class="w-100">
+                <mat-chip-listbox #chipList aria-label="Tag selection">
+                  <mat-chip-option
                     *ngFor="let tag of currentTags()"
                     [selectable]="selectable"
                     [removable]="removable"
                     (removed)="remove(tag)">
                     {{ tag }}
                     <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                  </mat-chip>
+                  </mat-chip-option>
                   <input
                     *ngIf="currentTags().length < maxTags"
                     placeholder="{{ 'WRITE-NEW.TAGS' | translate }}"
                     #tagInput
+                    matInput
                     [formControl]="tagControl"
                     [matAutocomplete]="auto"
                     [matChipInputFor]="chipList"
                     [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                     (matChipInputTokenEnd)="add($event)">
-                </mat-chip-list>
+                </mat-chip-listbox>
                 <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
                   <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">
                     {{ tag }}
@@ -63,14 +64,14 @@
             </mat-list-item>
             <mat-list-item>
               <!-- Image -->
-              <mat-form-field class="full-width">
+              <mat-form-field class="w-100">
                 <mat-label>{{ 'WRITE-NEW.COVERIMG' | translate }}</mat-label>
                 <input id="imageUrl" matInput [(ngModel)]="newsContent.imageUrl">
               </mat-form-field>
             </mat-list-item>
             <mat-list-item>
               <!-- Epigrafe -->
-              <mat-form-field class="full-width">
+              <mat-form-field class="w-100">
                 <mat-label>{{ 'WRITE-NEW.EPIGRAPH' | translate }}</mat-label>
                 <input id="imageText" matInput [(ngModel)]="newsContent.imageText">
               </mat-form-field>
@@ -84,8 +85,8 @@
               <!-- Body -->
               <form [formGroup]="editorForm">
                 <div class="form-group">
-                  <label for="editor">{{ 'WRITE-NEW.BODY' | translate }}</label>
-                  <quill-editor formControlName="editor" (onContentChanged)="updateNewsText($event)"></quill-editor>
+                  <label for="text-editor">{{ 'WRITE-NEW.BODY' | translate }}</label>
+                  <quill-editor formControlName="text-editor" (onContentChanged)="updateNewsText($event)"></quill-editor>
                 </div>
               </form>
             </mat-list-item>
@@ -100,7 +101,7 @@
               </mat-radio-group>
             </mat-list-item>
             <mat-list-item>
-              <mat-form-field class="half-width">
+              <mat-form-field class="w-50">
                 <mat-label>MM/DD/YYYY</mat-label>
                 <input matInput [min]="minDate" [matDatepicker]="datePicker" [disabled]="publishNow" [(ngModel)]="publishDate" (dateChange)="changePublishDate()">
                 <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
@@ -108,7 +109,7 @@
               </mat-form-field>
             </mat-list-item>
             <mat-list-item>
-              <button mat-raised-button class="upload-button" id="submitNews" (click)="submitNews()">
+              <button mat-raised-button class="upload-button" id="submitNews" color="primary" (click)="submitNews()">
                 {{ 'WRITE-NEW.UPLOAD' | translate }}
               </button>
             </mat-list-item>
