--- a/src/app/shared/components/event-card/event-card.component.html
+++ b/src/app/shared/components/event-card/event-card.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="[event.routerLink]">
+<a [routerLink]="[event.routerLink]" style="color: inherit; ">
   <mat-card class="event-card">
     <div class="image-with-text">
       <img
@@ -10,22 +10,20 @@
         {{ event.titleCode | translate }}
       </p>
     </div>
+    <mat-card-header>
+      <mat-card-title>{{ event.titleCode | translate }}</mat-card-title>
+    </mat-card-header>
     <mat-card-content class="mt-2">
-      <mat-card-title>{{
-        event.titleCode | translate
-        }}</mat-card-title>
       <p class="lead">{{ event.descriptionCode | translate }}</p>
-      <a class="link-text" [routerLink]="[event.routerLink]">
-        <h5 class="waves-light" mdbWavesEffect>
-          {{ "HOME.SEEMORE" | translate }}
-          <mdb-icon
-            fas
-            icon="chevron-right"
-            class="waves-light"
-            mdbWavesEffect
-          ></mdb-icon>
-        </h5>
-      </a>
+      <span style="color: var(--warning)">
+        {{ "HOME.SEEMORE" | translate }}
+        <mdb-icon
+          fas
+          icon="chevron-right"
+          class="waves-light"
+          mdbWavesEffect
+        ></mdb-icon>
+      </span>
     </mat-card-content>
   </mat-card>
 </a>
