--- a/src/app/shared/components/news-card/news-card.component.css
+++ b/src/app/shared/components/news-card/news-card.component.css
@@ -16,9 +16,9 @@
     flex:auto;
 }
 .news-card-content {
-    margin:1rem 0.5rem !important;
+    margin: 1rem auto !important;
     text-overflow: ellipsis;
-    width:100%;
+    width: 92%;
     height: 6rem;
     position: relative;
 }
@@ -32,10 +32,14 @@
     overflow: hidden !important;
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
-    width:90%;
+}
+
+.mat-mdc-card-content::ng-deep {
+  padding: 0 !important;
 }
 
 .align-end {
   position: absolute;
   bottom: 0;
+  width: 100%;
 }
