--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -10,105 +10,55 @@
     <app-navbar></app-navbar>
 </header>
 
-<body>
-    <div class="body" fxLayoutAlign="center center" fxLayout="column">
-        <div class="spacenav">
-        </div>
-
-        <div *ngIf="(newsData | async); else loadingSpinner" fxLayoutAlign="center center" fxLayout="column">
-            <div fxLayoutAlign="center center" fxLayout="column">
-                <div fxLayoutAlign="center center" fxLayout="column">
-                    <p class="author-text word-break">{{(newsData | async).author}}</p>
-
-                </div>
-            </div>
-
-            <div class="notopbottomLine" id="home" fxLayoutAlign="center center" fxLayout="column">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm">
-                            <h1 id="logotext" class="word-break">{{(newsData | async).title}} </h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div fxLayoutAlign="center center" fxLayout="column">
-                <div fxLayoutAlign="center center" fxLayout="column">
-                    <p class="add-margin author-text word-break">{{(newsData | async).shortIntro}}</p>
-                </div>
-            </div>
-
-            <div class="bottomLine">
-
-                <div class="blog-image" fxLayoutAlign="center center" fxLayout="column">
-                    <div class="add-margin">
-                        <mdb-card-img class="roundedBlock" src="{{(newsData | async).imageUrl}}"
-                            alt="Foto de noticia">
-                        </mdb-card-img>
-
-                        <p class="whitetext-photo-text">{{(newsData | async).imageText}}</p>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="topbottomLine">
-                <div class="container" fxLayoutAlign="center center" fxLayout="column">
-                    <div class="row">
-                        <div class="col-sm">
-                            <div [innerHTML]="content" class="add-margin whitetext word-break"> </div>
-                        </div>
-                    </div>
-                </div>
-                <!--Emoji Rating-->
-                <div style="margin-bottom:20px" class="whitetext-left word-break">¿Qué te pareció la noticia?</div>
-
-                <div class="d-inline-flex" style="margin-bottom:10px" *ngIf="emojisVisible">
-                  <div class="mr-2" *ngFor="let emoji of emojisList; index as i">
-                    <ngx-emoji style="margin-right: 7px; cursor:pointer" [emoji]="{ id: emoji, skin: 3 }" size="40"
-                               (emojiClick)="rateNews(emoji, i)"></ngx-emoji>
-                  </div>
-                </div>
-
-                <div style="margin-bottom:20px" class="whitetext-left word-break" *ngIf="isVisbile">Gracias por votar ! </div>
-
-              <mat-chip-list aria-label="Emoji selection">
-                <div *ngFor="let emoji of emojisList; index as i">
-                  <mat-chip style="pointer-events: none" [selected]="isSelected(i)">
-                    {{(newsData | async).ratings[i]}} <ngx-emoji [emoji]="{ id: emoji, skin: 3 }" size="15"></ngx-emoji>
-                  </mat-chip>
-                </div>
-
-                </mat-chip-list>
-
-                <!-- Date -->
-                <p class="whitetext-right">{{ ((newsData | async).date ) | date:'medium'}} </p>
-            </div>
-
-
-            <div class="bottomLine">
-            </div>
-            <!--<div class="bottomLine" fxLayoutAlign="center center" fxLayout="column">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm" >
-                            <h1 id="whitetext">{{(newsData | async).author}}</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
-        </div>
-
-        <ng-template #loadingSpinner class="screen-height">
-          <app-loading-spinner>
-          </app-loading-spinner>
-        </ng-template>
-
-        <div class="add-margin">
-            <app-footer></app-footer>
-        </div>
+<body fxLayout="column" fxLayoutAlign="start center" *ngIf="(newsData | async); else showLoadingSpinner">
+<div class="news-body" fxLayout="column" fxLayoutAlign="start center">
+  <div class="news-header mx-0 px-0">
+    <div class="d-flex flex-row mx-0">
+      <div class="d-flex flex-grow-1 flex-column">
+        <h1 class="my-0 px-0 my-0">{{(newsData | async).title}}</h1>
+        <p>Por {{(newsData | async).author}} {{((newsData | async).date) | date: 'mediumDate' }}</p>
+      </div>
+      <div class="d-flex flex-wrap align-self-baseline justify-content-end">
+        <div *ngFor="let tag of data.tags" class="badge news-tags mx-2 mb-1 p-2 d-none d-lg-block">{{tag}}</div>
+      </div>
     </div>
+    <div class="d-flex flex-wrap align-self-baseline">
+      <div *ngFor="let tag of data.tags" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
+    </div>
+
+  </div>
+  <hr class="header-divider">
+  <div class="news-intro py-3">
+    <p class="word-break text-justify" [innerHtml]="(newsData | async).shortIntro"></p>
+  </div>
+  <div class="news-image">
+    <mdb-card-img class="roundedBlock" src="{{(newsData | async).imageUrl}}"
+                  alt="Foto de noticia">
+    </mdb-card-img>
+    <p class="pt-1">{{(newsData | async).imageText}}</p>
+  </div>
+  <div class="news-content word-break py-5">
+    <div [innerHTML]="content"></div>
+  </div>
+  <div class="news-recomendations"></div>
+</div>
+
+<div class="recomended-news" fxLayout="column" fxLayoutAlign="start center">
+  <div class="recomended-news-area" fxLayout="column" fxLayoutAlign=" start">
+    <div class="recomended-news-header">
+      <h1>Noticias Recomendadas</h1>
+      <hr class="title-divider">
+    </div>
+    <div class="news-grid col">
+      <div *ngFor="let noticia of recommendedNews">
+        <div class="col-sm margin-top">
+          <app-news-card [noticia]="noticia"></app-news-card>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 </body>
 
 </html>
