fix: removed extra width on all pages and circular imports

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -1,3 +1,4 @@
+  <link href="https://unpkg.com/swiper/swiper-bundle.min.css" rel="stylesheet">
   <div class="banner">
     <img
       src="../../../../../assets/image/general-icons/banner6.jpg"
@@ -66,21 +67,18 @@
           <div class="pagination-prev-wrapper">
             <span class="swiper-button-prev swiper-events pagination-prev" id="events-pagination-prev"></span>
           </div>
-          <swiper [config]="swiperConfigEvents" style="width: 100%">
-            <ng-container *ngFor="let event of latestEvents">
-              <ng-template swiperSlide>
-                <app-event-card-short [event]="event" index="{{0}}"></app-event-card-short>
-              </ng-template>
-            </ng-container>
-          </swiper>
+            <swiper [config]="swiperConfigEvents" style="overflow: hidden; width: 100%;">
+              <ng-container *ngFor="let event of latestEvents" >
+                <ng-template swiperSlide>
+                  <app-event-card-short [event]="event" index="{{0}}"></app-event-card-short>
+                </ng-template>
+              </ng-container>
+            </swiper>
           <div class="pagination-next-wrapper">
             <span class="events-swiper-button-next swiper-button-next swiper-events pagination-next" id="events-pagination-next"></span>
           </div>
         </div>
       </div>
-      <ng-template #loadingSpinnerBlock>
-        <app-loading-spinner></app-loading-spinner>
-      </ng-template>
       <div class="pagination-wrapper swiper-events" id="events-pagination-wrapper"></div>
     </div>
     <div class="end-button-container">
@@ -108,9 +106,9 @@
       <div *ngIf="(newsDataObs | async)?.length != 0; else loadingSpinnerBlock">
         <div class="carousel-wrapper">
           <div class="pagination-prev-wrapper">
-            <span class=" swiper-button-prev swiper-news pagination-prev" id="news-pagination-prev"></span>
+            <span class="swiper-button-prev swiper-news pagination-prev" id="news-pagination-prev"></span>
           </div>
-          <swiper [config]="swiperConfig">
+          <swiper [config]="swiperConfig" style="overflow-x: hidden">
             <ng-container *ngFor="let noticia of latestNews">
               <ng-template swiperSlide>
                 <app-news-card [noticia]="noticia"></app-news-card>
